<resources>
    <!--======================COMMON======================-->
    <string name="app_name">CornerAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="common_recyclerview_foot_create">没有搜索结果,点击创建</string>
    <string name="common_recyclerview_foot_nomore">没有更多了</string>

    <string name="common_sure">确定</string>
    <string name="common_cancel">取消</string>

    <!--======================LOGIN======================-->
    <!--<string name="corner_title">Corner</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="login_register_btn_text">SIGNUP</string>
    <string name="login_forget_btn_text">forget password?</string>
    <string name="login_email_hint">example@corner.com</string>
    <string name="login_password_hint">enter password</string>-->

    <string name="corner_title">角落</string>
    <string name="login_btn_text">登录</string>
    <string name="login_register_btn_text">注册</string>
    <string name="login_forget_btn_text">忘记密码?</string>
    <string name="login_email_hint">example@corner.com</string>
    <string name="login_password_hint">密码</string>
    <string name="login_nickname_hint">昵称</string>
    <string name="login_birth_hint">生日</string>

    <!--======================REGISTER======================-->
    <string name="register_sex_gril">女</string>
    <string name="register_sex_man">男</string>
    <string name="register_join">加入</string>
    <string name="register_title">注册</string>


    <string name="register_email_error">邮箱格式不正确</string>
    <string name="register_password_error">密码由6-20位数字、字母、符号组成</string>
    <string name="register_nickname_error">昵称格式不正确</string>


    <!--======================HOME======================-->
    <string name="home_title">首页</string>
    <string name="home_action_search">搜索</string>
    <string name="home_action_notify">通知</string>
    <string name="home_action_setting">设置</string>
    <string name="home_fab_photo">相册</string>
    <string name="home_fab_camera">相机</string>
    <string name="home_send_success_tip">发布成功</string>

    <!--======================PICTURE_EDIT======================-->
    <string name="picture_edit_title">图片编辑</string>
    <string name="picture_edit_cancel_tip">是否放弃编辑?</string>
    <string name="picture_edit_next_step">下一步</string>

    <!--======================SEND======================-->
    <string name="send_title">发布</string>
    <string name="send_text_hint">输入文字...</string>
    <string name="send_location_hint">添加角落位置</string>
    <string name="send_finish">发布</string>

    <!--======================PERSONAL======================-->
    <string name="personal_title">个人主页</string>
    <string name="personal_attention">关注</string>
    <string name="personal_fan">粉丝</string>
    <string name="personal_want_corner">想去</string>
    <string name="personal_been_corner">去过</string>

    <!--======================COMMENT======================-->
    <string name="comment_title">评论</string>
    <string name="comment_send">发送</string>
    <string name="comment_menu_delete">删除</string>
    <string name="comment_menu_cancel">取消</string>
    <string name="comment_input_hint_reply">回复</string>

    <!--======================Location======================-->
    <string name="location_title">评论</string>
    <string name="location_name">名称</string>

    <!--======================Publish======================-->
    <string name="publish_location_is_null">位置没有填写</string>

    <!--======================WIDGET======================-->
    <string name="widget_corner_article_card_want_to">想去</string>

    <string name="widget_user_article_card_attention">关注</string>
</resources>
