<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/location_name"/>
        <EditText
            android:id="@+id/create_corner_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/dialog_create_corner_sure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_sure"/>
        <Button
            android:id="@+id/dialog_create_corner_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_cancel"/>
    </LinearLayout>
</LinearLayout>