<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.astatus.cornerandroid.activity.LoginActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:text="@string/corner_title"
        android:layout_height="wrap_content"
        android:textSize="56sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_marginTop="48dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="45dp"
        android:background="@drawable/login_input_background"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@mipmap/ic_email_black_36dp"/>
        <EditText
            android:id="@+id/login_email_textedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/login_email_hint"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="45dp"
        android:background="@drawable/login_input_background"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@mipmap/ic_lock_black_36dp"/>
        <EditText
            android:id="@+id/login_password_textedit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/login_password_hint"
            android:password="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/login_forget_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_forget_btn_text"
        android:gravity="right"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/login_enter_btn"
        style="?android:attr/buttonStyleSmall"
        android:background="?attr/colorPrimary"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_btn_text"
        android:elevation="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/login_register_btn"
        style="?android:attr/buttonStyleSmall"
        android:background="?attr/colorAccent"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_register_btn_text"
        android:elevation="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp"/>


</LinearLayout>
