<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_collapseMode="parallax">

    <ImageView
        android:id="@+id/personal_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/cat"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/personal_head_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_account_circle_black_48dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_attention"/>
                <TextView
                    android:id="@+id/personal_attention_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_fan"/>
                <TextView
                    android:id="@+id/personal_fan_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_want_corner"/>
                <TextView
                    android:id="@+id/personal_want_corner_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_been_corner"/>
                <TextView
                    android:id="@+id/personal_been_corner_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/personal_signature_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="我是签名签名签名签名签名签名签名签名"/>
    </LinearLayout>

</FrameLayout>